# sbi_stream

./: .gitignore  LSST10_DECAM.csv  README.md  anal.ipynb  anal_utils.py  datasets.py  infer.py  inference.py  optuna_npe.py  preprocess.py  preprocess_data.py  pyproject.toml  run_infer.py  train.py  train_debug.py  train_npe.py  train_snpe.py  tutorial1_training.ipynb  tutorial2.ipynb  via_rverr_fehm2_eep500.csv
analysis/: analysis_utils.py
configs/: 2params.py  config.py  example_all.py  example_embed.py  example_npe.py  example_npe_pretrained_embed.py  example_optuna_npe.py  example_optuna_npe_full.py  example_preprocess.py  example_sim_prior_only.py  example_sim_proposal.py  example_snpe.py  zuko_config.py
datasets/: __init__.py  bin_stream_2.py  copy_init.py  io_utils.py  preprocess_utils.py  sim_uncertainty.csv  utils.py
example_configs/: 6params-uni-large.py  submit_train.sh
models/: flows_utils.py  infer_utils.py  models.py  models_utils.py  regressor.py  schedulers.py  utils.py
notebooks/: default.mplstyle  figure10.ipynb  figure2.ipynb  figure4.ipynb  figure5.ipynb  figure6.ipynb  figure7.ipynb  figure8.ipynb  figure9.ipynb
posteriors/: hilmi24-nw-sf1.hdf5  spline-nw-sf1.hdf5  spline-sf1.hdf5
sbi_stream/: flows_utils.py  infer_utils.py  models_utils.py  npe.py  training_utils.py  transforms.py
scripts/: README.md  plotting.py  preprocess.py  run_simulations.py  run_simulations_from_priors.py  train_embed.py  train_npe.py  train_nre.py  train_optuna_npe.py  train_snpe.py
slurm/: config.py  submit_train.sh
tutorials/: process_aau.ipynb  (+3 more)
(+83 files in other folders)
