[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbi_stream"
version = "2.0.0"
description = "Simulation-based inference for stellar streams."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

dependencies = [
    "numpy",
    "torch",
    "pytorch-lightning",
    "torch-geometric",
    "h5py",
    "ml-collections",
    "wandb",
    "optuna",
    "tqdm",
    "matplotlib",
    "scipy",
]

[tool.setuptools]
packages = ["sbi_stream"]
